2005-10-19  Frederic Ruaudel <grumz@grumz.net> 0.8

	* utils/Makefile.am:
	* utils/nautilus-actions-new-config.c: Create the new config 
creation tool in command line mode.

	* libnautilus-actions/nautilus-actions-config.c: Fix the copy of 
GSList when setting schemes and basenames of an action.

	* libnautilus-actions/nautilus-actions-config-gconf-private.h: Fix
the short description of the scheme entry in the Gconf Schemas

2005-10-17  Frederic Ruaudel <grumz@grumz.net> 0.8

	* Makefile.am:
	* configure.in:
	* utils/Makefile.am:
	* utils/nautilus-actions-convert.c: Create a utils folder to put the 
utilities program and code the old config conversion tool to convert old 
xml file into GConf schemas.

	* libnautilus-actions/nautilus-actions-config-xml.c:
	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h: Fix several bugs
made during the first implementation


2005-10-13  Frederic Ruaudel <grumz@grumz.net> 0.8

	* libnautilus-actions/Makefile.am: Add new file in the sources files
list

	* libnautilus-actions/nautilus-actions-config-gconf.c:
	* libnautilus-actions/nautilus-actions-config-gconf-private.h: move
Gconf element information in a common private headers.

	* libnautilus-actions/nautilus-actions-config-schema.c:
	* libnautilus-actions/nautilus-actions-config-schema.h: Add support 
for GConf xml schema export

2005-10-06  Rodrigo Moya <rodrigo@novell.com>

	* nact/Makefile.am: don't link to libuuid here.

	* libnautilus-actions/Makefile.am: do it here.

	* libnautilus-actions/nautilus-actions-config.c
	(nautilus_actions_config_add_action): don't look for NULL uuids, in the
	hash table, and generate UUID for actions that don't have it.

2005-10-06  Rodrigo Moya <rodrigo@novell.com>

	* libnautilus-actions/nautilus-actions-config-xml.c
	(nautilus_actions_config_xml_get_type):
	* libnautilus-actions/nautilus-actions-config-gconf.c
	(nautilus_actions_config_gconf_get_type): base the class in